--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -25,4 +25,4 @@ jobs:
       # Runs a single command using the runners shell
         
       - name: Deploys to EMS Dev Org
-        run: sfdx force:source:deploy -c -p . -u org-2 
+        run: sfdx force:source:deploy -c -p . -u EMS-Dev 
