--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -5,8 +5,8 @@ name: EMS-Dev
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [ "master" ]
+ # push:
+ #   branches: [ "master" ]
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,5 +24,5 @@ jobs:
 
       # Runs a single command using the runners shell
         
-      - name: Deploys to EMS Dev Org
+      - name: Validate Code to EMS Dev Org
         run: sfdx force:source:deploy -c -p . -u EMS-Dev 
