--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -16,7 +16,10 @@ jobs:
   Validate:
     # The type of runner that the job will run on
     runs-on: self-hosted
-
+    defaults:
+        run: 
+            shell: bash
+        
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
