--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Validate to EMS-Dev Org
+name: Validate to EMS-Qa Org
 
 # Controls when the workflow will run
 on:
@@ -24,5 +24,5 @@ jobs:
 
       # Runs a single command using the runners shell
         
-      - name: Validate Code to EMS Dev Org
-        run: sfdx force:source:deploy -c -p . -u EMS-Dev 
+      - name: Validate Code to EMS QA Org
+        run: sfdx force:source:deploy -c -p . -u EMS-Qa 
