--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy to EMS-Dev Org
+name: Deploy to EMS-Qa Org
 
 # Controls when the workflow will run
 on:
@@ -24,5 +24,5 @@ jobs:
 
       # Runs a single command using the runners shell
         
-      - name: Deploys to EMS Dev Org
-        run: sfdx force:source:deploy -p . -u EMS-Dev 
+      - name: Deploys to EMS Qa Org
+        run: sfdx force:source:deploy -p . -u EMS-Qa
