--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Validate to EMS-Qa Org
+name: Validation Job
 
 # Controls when the workflow will run
 on:
@@ -10,7 +10,15 @@ on:
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+    inputs:
+      choice:
+        type: choice
+        description: Select A Org to Validate
+        options:
+        - EMS-Dev
+        - EMS-Qa
+    
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Validate:
