--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -33,4 +33,5 @@ jobs:
       # Runs a single command using the runners shell
         
       - name: Validate Code to EMS QA Org
-        run: sfdx force:source:deploy -c -p . -u EMS-Qa 
+        run: sfdx force:source:deploy -c -p . -u ${{ github.event.inputs.choice }}
+        
