--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -4,29 +4,36 @@ name: Validation Job
 
 # Controls when the workflow will run
 on:
+  
   # Triggers the workflow on push or pull request events but only for the "master" branch
  # push:
  #   branches: [ "master" ]
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    
     inputs:
+      
       choice:
         type: choice
         description: Select A Org to Validate
         options:
         - EMS-Dev
         - EMS-Qa
+      run-name: ${{ inputs.deploy_target }} 
     
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  
   Validate:
     # The type of runner that the job will run on
     runs-on: self-hosted
+    
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
