--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -5,6 +5,13 @@ name: Validation Job
 # Controls when the workflow will run
 on:
   workflow_dispatch:
+    inputs:
+      choice:
+        type: choice
+        description: Select Org
+        options:
+        - EMS-Dev
+        - EMS-Qa
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
