--- a/.github/workflows/validate-to-dev.yml
+++ b/.github/workflows/validate-to-dev.yml
@@ -1,16 +1,18 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Validate to EMS-Qa Org
+name: Validation Job
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
- # push:
- #   branches: [ "master" ]
-  
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+    inputs:
+      choice:
+        type: choice
+        description: Select Org
+        options:
+        - EMS-Dev
+        - EMS-Qa
+    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Validate:
@@ -19,10 +21,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
         
       - name: Validate Code to EMS QA Org
-        run: sfdx force:source:deploy -c -p . -u EMS-Qa 
+        run: sfdx force:source:deploy -c -p . -u ${{ github.event.inputs.choice }}
+        
