--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Validation Job
+name: Validation Job ${{ github.event.inputs.choice }} ${{ inputs.deploy_target }}
 
 # Controls when the workflow will run
 on:
@@ -29,6 +29,4 @@ jobs:
         
       - name: Validate Code to EMS QA Org
         run: sfdx force:source:deploy -c -p . -u ${{ github.event.inputs.choice }}
-        
-run-name: ${{ inputs.deploy_target }}
         
