--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -1,6 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Validation Job ${{ github.event.inputs.choice }} ${{ inputs.deploy_target }}
+name: Validation Job 
+run-name: ${{ github.event.inputs.choice }} ${{ inputs.deploy_target }}
 
 # Controls when the workflow will run
 on:
