--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 name: Validation Job 
-run-name: ${{ github.event.inputs.choice }} ${{ inputs.deploy_target }}
+run-name: Validation for ${{ github.event.inputs.choice }} ${{ inputs.deploy_target }}
 
 # Controls when the workflow will run
 on:
