--- a/.github/workflows/full-validation.yml
+++ b/.github/workflows/full-validation.yml
@@ -1,1 +1,33 @@
 #Full Validation Job
+
+name: Full Validation Job 
+run-name: Full Validation for ${{ github.event.inputs.choice }}
+
+# Controls when the workflow will run
+on:
+  workflow_dispatch:
+    inputs:
+      choice:
+        type: choice
+        description: Select Org
+        options:
+        - EMS-Dev
+        - EMS-Qa
+     
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  Validate:
+    # The type of runner that the job will run on
+    runs-on: self-hosted
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      # Runs a single command using the runners shell
+        
+      - name: Validate Code to EMS Org
+#         run: sfdx force:source:deploy -c -p . -u ${{ github.event.inputs.choice }}
+        run: sfdx force:apex:test:run --testlevel RunLocalTests -u EMS-Dev --resultformat json > deploy.log
