--- a/.github/workflows/full-validation.yml
+++ b/.github/workflows/full-validation.yml
@@ -16,7 +16,7 @@ on:
      
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  Validate:
+  Full-Validation:
     # The type of runner that the job will run on
     runs-on: self-hosted
 
@@ -28,3 +28,6 @@ jobs:
 
       - name: Building the Error Report
         run: sh /home/ec2-user/report.sh ${{ github.event.inputs.choice }}
+        
+      - name: Access the report here
+        run : echo "http://ec2-184-73-72-245.compute-1.amazonaws.com/report.html"
