--- a/.github/workflows/full-validation.yml
+++ b/.github/workflows/full-validation.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Building the Error Report
-        run: sh /home/ec2-user/report.sh ${{ github.event.inputs.choice }}
+        run: sh /home/ec2-user/report.sh ${{ github.event.inputs.choice }} ${{ github.run_id }} 
