--- a/.github/workflows/full-validation.yml
+++ b/.github/workflows/full-validation.yml
@@ -27,7 +27,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Running the Test Report
-        run: sfdx force:apex:test:run --testlevel RunLocalTests -u ${{ github.event.inputs.choice }} --resultformat json > /tmp/ndeploy.log
+#        run: sfdx force:apex:test:run --testlevel RunLocalTests -u ${{ github.event.inputs.choice }} --resultformat json > /tmp/ndeploy.log
+        run: sh /home/ec2-user/report.sh ${{ github.event.inputs.choice }}
 
   Generating-Report:
     runs-on: self-hosted
