--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 name: Validation Job 
-run-name: Validating  ${{github.ref_name}} to ${{ github.event.inputs.choice }}
+run-name: Validating  ${{github.ref_name}} Branch with ${{ github.event.inputs.choice }} Org
 
 # Controls when the workflow will run
 on:
