--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -18,6 +18,7 @@ on:
         options:
         - EMS-Dev
         - EMS-Qa
+        - EMS-UAT
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
