--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -13,7 +13,7 @@ on:
         options:
         - EMS-Dev
         - EMS-Qa
-        - EMS-UAT
+        - EMS-Uat
      
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
