--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -31,5 +31,5 @@ jobs:
       # Runs a single command using the runners shell
         
       - name: Validate Code to EMS QA Org
-        run: sfdx force:source:deploy -c -p . -u ${{ github.event.inputs.choice }} -l RunLocalTests
+        run: sfdx force:source:deploy -c -p . -o ${{ github.event.inputs.choice }} -l RunLocalTests
         
