--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -20,7 +20,8 @@ on:
 jobs:
   Validate:
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    # runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
