--- a/.github/workflows/validation-job.yml
+++ b/.github/workflows/validation-job.yml
@@ -15,6 +15,7 @@ on:
         - EMS-Qa
         - EMS-Uat
         - EMS-Prod
+        - EMS-Pms
      
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
